argo-cd/3-custom/argocd-application-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: application-controller
    app.kubernetes.io/name: argocd-application-controller
    app.kubernetes.io/part-of: argocd
  name: argocd-application-controller
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/proxyCPU: 50m
