argo-cd/3-custom/argocd-dex-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: dex-server
    app.kubernetes.io/name: argocd-dex-server
    app.kubernetes.io/part-of: argocd
  name: argocd-dex-server
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/proxyCPU: 50m
