argo-cd/3-custom/argocd-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: redis
    app.kubernetes.io/name: argocd-redis
    app.kubernetes.io/part-of: argocd
  name: argocd-redis
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/proxyCPU: 50m
