argo-cd/3-custom/argocd-repo-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: repo-server
    app.kubernetes.io/name: argocd-repo-server
    app.kubernetes.io/part-of: argocd
  name: argocd-repo-server
  namespace: argocd
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/proxyCPU: 50m
