argo-cd/3-custom/argocd-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/proxyCPU: 50m
    spec:
      containers:
        - name: argocd-server
          command:
            - argocd-server
            - --staticassets=/shared/app
            - --insecure
