argo-cd/3-custom/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd
spec:
  gateways:
    - istio-system/ingressgateway
  http:
    - route:
        - destination:
            port:
              number: 80
            host: argocd-server
